--- a/.github/workflows/build-homeassistant.yml
+++ b/.github/workflows/build-homeassistant.yml
@@ -23,7 +23,7 @@ on:
       armbian_board:
         description: "Select device board."
         required: false
-        default: "all"
+        default: "s905l3"
         type: choice
         options:
           - all
